@@ -23,7 +23,7 @@ require '../include/ispcp-lib.php';
 check_login(__FILE__);
 
 $tpl = new pTemplate();
-$tpl->define_dynamic('page', Config::get('RESELLER_TEMPLATE_PATH') . '/edit_alias.tpl');
+$tpl->define_dynamic('page', Config::get('RESELLER_TEMPLATE_PATH') . '/alias_edit.tpl');
 $tpl->define_dynamic('page_message', 'page');
 $tpl->define_dynamic('logged_from', 'page');
 
@@ -186,7 +186,7 @@ function check_fwd_data(&$tpl, $alias_id) {
 	$ed_error = '_off_';
 	$admin_login = '';
 
-	if ($forward_url != 'no') {
+	if ($status != '0') {
 		if (!chk_forward_url($forward_url)) {
 			$ed_error = tr("Incorrect forward syntax");
 		}
@@ -200,7 +200,7 @@ function check_fwd_data(&$tpl, $alias_id) {
 			$forward_url = "no";
 		}
 
-		$query = <<<SQL
+		$query = "
 			UPDATE
 				domain_aliasses
 			SET
@@ -208,9 +208,19 @@ function check_fwd_data(&$tpl, $alias_id) {
 				alias_status = ?
 			WHERE
 				alias_id = ?
-SQL;
-
+		";
 		exec_query($sql, $query, array($forward_url, Config::get('ITEM_CHANGE_STATUS'), $alias_id));
+
+		$query = "
+			UPDATE
+				subdomain_alias
+			SET
+				subdomain_alias_status = ?
+			WHERE
+				alias_id = ?
+		";
+		exec_query($sql, $query, array(Config::get('ITEM_CHANGE_STATUS'), $alias_id));
+
 		check_for_lock_file();
 		send_request();
 
