@@ -1,9 +1,14 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2008-12-11 Daniel Andreca
+	- GUI:
+		* Ticket #1580: Modifying domain's traffic limit removes subdomain in ispcp.conf
+
 2008-12-09 Daniel Andreca
 	- GUI:
 		* SQL passwords were not encrypted on critical update
+		* Login problem is too many wrong password (big thanks Kika)
 
 2008-12-08 Daniel Andreca
 	- GUI:
